# Calculator

./: .gitignore  CMakeLists.txt  README.md
include/: Calculator.h  Core.h  Execute.h  Format.h  Settings.h
src/: Calculator.c  Core.c  Execute.c  Format.c  Main.c  Settings.c  Settings.txt
